--- a/src/app/components/exibir/exibir.component.html
+++ b/src/app/components/exibir/exibir.component.html
@@ -1,1 +1,8 @@
-<p>exibir works!</p>
+<div>
+  <div class="user-card">
+    <p>Nome: {{nome}}</p>
+    <p>Email: {{email}}</p>
+    <p>Phone: {{phone}}</p>
+    <p>Website: <a href="#" target="_blank" rel="noopener noreferrer">{{website}}</a></p>
+  </div>
+</div>
