--- a/src/app/components/listar/listar.component.html
+++ b/src/app/components/listar/listar.component.html
@@ -1,9 +1,20 @@
 <section>
-    @for (user of usuarios; track user.id) {
-        <div class="user-card">
-            <h3>{{ user.name }}</h3>
-            <p>Email: {{ user.email }}</p>
-            <p>Phone: {{ user.phone }}</p>
-        </div>
+  @for (user of usuarios; track user.id) {
+  <div class="user-card">
+    <h3>{{ user.username }}</h3>
+    <button (click)="ativarExibirPorId(user.id)">
+      {{ usuarioExibidoId === user.id ? "Ocultar" : "Exibir" }}
+    </button>
+    @if (usuarioExibidoId === user.id) {
+    <app-exibir
+      class="user-details"
+      nome="{{ user.username }}"
+      email="{{ user.email }}"
+      phone="{{ user.phone }}"
+      website="{{ user.website }}"
+    >
+    </app-exibir>
     }
+  </div>
+  }
 </section>
