--- a/src/app/pages/nova-pagina/nova-pagina.component.html
+++ b/src/app/pages/nova-pagina/nova-pagina.component.html
@@ -1,9 +1,8 @@
 <section>
-  @for (user of usuarios; track user.id) {
-    <app-exibir class="user-card">
+    <app-exibir *ngIf="user" [user]="user"
+    class="user-card">
       <p>{{ user.email }}</p>
       <p>{{ user.phone }}</p>
       <p>{{ user.website }}</p>
     </app-exibir>
-  }
 </section>
